--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
-    <string name="app_name">outlet-order</string>
+    <string name="app_name">Loyality</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="oops_nnot_a_member_yet">Oops!\nNot a member yet!</string>
+    <string name="base_url">http://88.99.62.137:5000/</string>
 </resources>
